# URBN

./: .gitignore  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: deploy.yml
backend/: .env  auth.py  database.py  dockerfile  email_service.py  main.py  models.py  pyproject.toml  sse.py  storage.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_missing_columns.py  b2c3d4e5f6a7_add_hidden_flag.py  cd8506be469d_add_new_fields_v2.py  fc3d8036285c_init.py
backend/routers/: auth_router.py  files.py  golden.py  notifications.py  products.py
deploy/: backend.env.example  frontend.env.example  setup.sh  urbn-backend.service  urbn-frontend.service
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/approved/: page.tsx
frontend/app/archived/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/decision-pending/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/golden-product/: page.tsx
frontend/app/hidden/: page.tsx
frontend/app/hold-insights/: page.tsx
frontend/app/login/: page.tsx
frontend/app/notifications/: page.tsx
frontend/app/npd-testing/: page.tsx
frontend/app/on-hold/: page.tsx
frontend/components/: AppShell.tsx  AuthShell.tsx  Chip.tsx  Field.tsx  GlobalLoader.tsx  Logo.tsx  Modal.tsx  NotificationBell.tsx  NpdForm.tsx  Sidebar.tsx  Toast.tsx  Topbar.tsx
frontend/lib/: api.ts  auth.ts  colors.ts  datetime.ts  loading.ts  orderStatus.ts  products-context.tsx  upload.ts
(+10 files in other folders)
